--- a/src/Scss/stillshit.scss
+++ b/src/Scss/stillshit.scss
@@ -1,8 +1,8 @@
 @use 'sass:color';
 
 // override theme
-$primary: #FFFFFF; // yellow
-$secondary: #FFE526; // light green
+$primary: #FFE526; // yellow
+$secondary: #CEFFC1; // light green
 $text-color: #000000;
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
@@ -19,7 +19,7 @@ body {
     max-width: 1200px;
 
     color: $text-color;
-    background: rgb(250,250,210);
+    background: rgb(250, 250, 210);
     background: linear-gradient(90deg, rgba(250,250,210,1) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 75%, rgba(250,250,210,1) 100%);
 }
 
@@ -27,6 +27,9 @@ video {
     object-fit: fill;
 }
 
+.navbar-toggler-icon {
+    background-image: url('/navbar-toggler-icon.png');
+}
 
 // css class
 .card {
@@ -35,12 +38,35 @@ video {
     }
 
     .card-body {
-        background-color: $primary;
+        background-color: scale-color($primary, $lightness: 50%);
 
         .post-images {
-            display: flex;
-            align-items: center;
+            text-align: center;
+
+            .image-container {
+                img {
+                    background: transparent;
+                    border: none;
+                }
+
+                &:hover {
+                    background-color: $secondary;
+                }
+            }
         }
+    }
+}
+
+.tags {
+    border-top: 3px solid $secondary !important;
+}
+
+.tag {
+    border: 2px solid $secondary;
+
+    &:hover {
+        background-color: $primary !important;
+        border: 2px solid $primary;
     }
 }
 
