--- a/templates/Blog/card_post.html.twig
+++ b/templates/Blog/card_post.html.twig
@@ -1,28 +1,38 @@
 {% for post in posts %}
     <div class="row card mb-3">
         <div class="card-header">
-            <div class="happended-date float-start">Happened on {{ post.happenedDate|format_datetime('short', 'none', locale='fr') }}</div>
-            <div class="creation-date float-end">Written on {{ post.creationDate|format_datetime('short', 'none', locale='fr') }}</div>
+            <div class="happended-date d-inline-block d-sm-none">Happened on {{ post.happenedDate|format_datetime(pattern='dd/MM') }}</div>
+            <div class="happended-date d-none d-sm-inline-block">Happened on {{ post.happenedDate|format_datetime('short', 'none', locale='fr') }}</div>
+            <div class="creation-date d-inline-block d-sm-none float-right">Written on {{ post.creationDate|format_datetime(pattern='dd/MM') }}</div>
+            <div class="creation-date d-none d-sm-inline-block float-right">Written on {{ post.creationDate|format_datetime('short', 'none', locale='fr') }}</div>
         </div>
         <div class="card-body container-fluid">
             <div class="card-text"><p>{{ post.text }}</p></div>
             {% set cpt = 0 %}
-            <div class="row post-images">
+            <div class="row display-flex post-images">
                 {% for image in post.images %}
-                <div class="col-lg-3 col-md-4 col-sm-6 mb-2">
+                <div class="image-container col-lg-3 col-md-4 col-6 mb-2">
                     <figure>
                         <a class="gallery" data-id="{{ post.id }}" href="#">
-                            <img class="img-fluid img-thumbnail rounded" data-index="{{ cpt }}" data-id="{{ image.id }}" data-caption="{{ image.caption }}" data-width="{{ image.width }}" data-height="{{ image.height }}" data-isvideo="{% if image.isVideo() %}true{% else %}false{% endif %}" src="{{ asset('/album' ~ image.getPathInAlbum() ~ image.getFilenameWithExtension() ) }}"/>
+                            <img class="img-fluid img-thumbnail m-0 border-0"
+                                 data-index="{{ cpt }}"
+                                 data-id="{{ image.id }}"
+                                 data-caption="{{ image.caption }}"
+                                 data-width="{{ image.width }}"
+                                 data-height="{{ image.height }}"
+                                 data-isvideo="{% if image.isVideo() %}true{% else %}false{% endif %}"
+                                 src="{{ asset('/album' ~ image.getPathInAlbum() ~ image.getFilenameWithExtension() ) }}"
+                            />
                         </a>
-                        <figcaption class="text-center img-caption">{{ image.caption }}</figcaption>
+                            {% if image.caption is not null %}<figcaption class="text-center img-caption">{{ image.caption }}</figcaption><{% endif %}
                     </figure>
                     {% set cpt = cpt + 1 %}
                 </div>
                 {% endfor %}
             </div>
-            <div class="tags border-top pt-3 border-secondary p-2">
+            <div class="tags pt-3 p-2">
                 {% for tag in post.tags|split(';') %}
-                    <span class="bg-secondary p-2 mr-2"><a href="#" class="text-dark"><u>#{{ tag }}</u></a></span>
+                    <span class="tag d-inline-block bg-secondary rounded p-2 mr-2 my-2"><a href="#" class="text-dark"><u>#{{ tag }}</u></a></span>
                 {% endfor %}
             </div>
         </div>
