--- a/templates/Blog/create_post.html.twig
+++ b/templates/Blog/create_post.html.twig
@@ -39,6 +39,7 @@
     </div>
 
     {{ form_end(form) }}
+    <br>
     <div class="image_list"></div>
 {% endblock body %}
 
@@ -71,7 +72,14 @@
                         let newImageId = data.id;
                         imageIds = imageIds === "" ? newImageId : imageIds+";"+newImageId
                         $("#post_imageIds").val(imageIds);
-                        $(".image_list").html($(".image_list").html()+'<figure class="image-thumbnail"><img width="200" height="100" src="/uploads/'+data.src+'"/><figcaption><input class="imageCaptions" id="caption_for_'+newImageId+'" data-id="'+newImageId+'" type="text" /></figcaption></figure>');
+                        $(".image_list").html($(".image_list").html()+'\
+                            <figure class="p-1 bg-primary d-inline-block mx-2 image-thumbnail">\n\
+                                <img width="200" height="100" src="/uploads/'+data.src+'"/>\n\
+                                <figcaption>\n\
+                                    <input class="w-100 mt-1 imageCaptions" id="caption_for_'+newImageId+'" data-id="'+newImageId+'" type="text" />\n\
+                                </figcaption>\n\
+                            </figure>\n\
+                        ');
                     }
                 });
             }
