--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,8 +10,24 @@
         <script src="{{ asset('scripts/jquery.min.js') }}"></script>
     </head>
     <body>
-        <header class="header">
-            {%  block header %}{% endblock %}
+        <header class="header px-2">
+            <nav class="navbar navbar-expand-sm">
+                <a class="navbar-brand mb-0 h1">Bobyblog</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" id="happenedDate" href="#">Sort by happened date</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="creationDate"  href="#">Sort by posting date</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </header>
 
         <div class="container">
