Improve design and responsiv

--- a/src/Scss/stillshit.scss
+++ b/src/Scss/stillshit.scss
@@ -47,6 +47,7 @@ video {
                 img {
                     background: transparent;
                     border: none;
+                    max-height: 20vh;
                 }
 
                 &:hover {
