--- a/templates/Blog/card_post.html.twig
+++ b/templates/Blog/card_post.html.twig
@@ -11,7 +11,7 @@
             {% set cpt = 0 %}
             <div class="row display-flex post-images">
                 {% for image in post.images %}
-                <div class="image-container col-lg-3 col-md-4 col-6 mb-2">
+                <div class="image-container col-lg-2 col-md-3 col-sm-4 col-6 mb-2">
                     <figure>
                         <a class="gallery" data-id="{{ post.id }}" href="#">
                             <img class="img-fluid img-thumbnail m-0 border-0"
