--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,13 +10,14 @@
         <script src="{{ asset('scripts/jquery.min.js') }}"></script>
     </head>
     <body>
-        <div class="row">
+        {% block header %}
+            <div class="row">
                 <nav class="navbar navbar-expand-sm">
                     <a class="navbar-brand mb-0 h1">Bobyblog</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
-
+<!--
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
@@ -28,9 +29,9 @@
                         </ul>
                     </div>
                 </nav>
-        </div>
-
-        <div class="my-2">Current sort: <span class="currentView"/></div>
+-->
+            </div>
+        {% endblock %}
 
         <div class="container p-sm-0">
             {% block body %}{% endblock %}
