--- a/src/Scss/stillshit.scss
+++ b/src/Scss/stillshit.scss
@@ -14,17 +14,31 @@ a {
 }
 
 body {
-    margin: auto;
-    padding: 0px;
-    max-width: 1200px;
-
-    color: $text-color;
     background: rgb(250, 250, 210);
     background: linear-gradient(90deg, rgba(250,250,210,1) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 75%, rgba(250,250,210,1) 100%);
+    color: $text-color;
+    margin: auto;
+    max-width: 1200px;
+    padding: 0px;
+
 }
 
 video {
     object-fit: fill;
+}
+
+#loadingScreen {
+    background-color: scale-color($secondary, $alpha: -50%);
+    height: 100%;
+    min-height: 600px;
+    position: absolute;
+    width: 100%;
+
+    .spinner {
+        left: 48%;
+        position: absolute;
+        top: 48%;
+    }
 }
 
 .navbar-toggler-icon {
@@ -76,6 +90,10 @@ video {
 }
 
 .menu {
-    margin: auto;
     heigth: 50px;
+    margin: auto;
+}
+
+.btn-outline-primary {
+    color: $black;
 }
