--- a/public_html/stillshit.css
+++ b/public_html/stillshit.css
@@ -31,3 +31,16 @@ video {
     align-items: center;
     min-height: 100vh;
 }
+
+.pagination__page-link, .pagination__spacer-span {
+    border-radius: 0.25rem;
+    background-color: #198754;
+    padding: 0.5rem 1rem;
+    display: inline-block;
+    margin: 0.5rem;
+    text-decoration: none;
+}
+
+.pagination__spacer-span {
+    color: white;
+}
